--- a/views/log-in.ejs
+++ b/views/log-in.ejs
@@ -1,11 +1,11 @@
 <div class="login">
   <h1>Welcome Back!</h1>
   <form>
-    <input type="email" class="input-box" placeholder="Email Address" />
+    <input type="text" class="input-box" placeholder="Email Address" />
     <input type="password" class="input-box" placeholder="Password" />
   </form>
   <div class="login2">
-    <button type="button" class="login-btn">Login</button>
+    <button type="submit" class="login-btn">Login</button>
   </div>
 </div>
 <div class="login-foot">
