--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,15 +1,56 @@
 <div class="sign-up">
   <h1>Sign up</h1>
   <p>Create an account an keep updated</p>
-  <form>
-    <input type="first-name" class="input-box" placeholder="First Name" />
-    <input type="last-name" class="input-box" placeholder="Last Name" />
-    <input type="email" class="input-box" placeholder="Email Address" />
-    <input type="password" class="input-box" placeholder="Password" />
+  <form method="post" action="/sign-up">
+    <input
+      type="text"
+      class="input-box"
+      placeholder="First Name"
+      id="firstName"
+      name="firstName"
+      value="<%= values.firstName %>"
+    />
+    <% if(validation.firstName){ %>
+    <span style="color: red"><%= validation.firstName %></span>
+    <% } %>
+    <input
+      type="text"
+      class="input-box"
+      placeholder="Last Name"
+      id="lastName"
+      name="lastName"
+      value="<%= values.lastName %>"
+    />
+    <% if(validation.lastName){ %>
+    <span style="color: red"><%= validation.lastName %></span>
+    <% } %>
+    <input
+      type="text"
+      class="input-box"
+      placeholder="Email Address"
+      id="email"
+      name="email"
+      value="<%= values.email %>"
+    />
+    <% if(validation.email){ %>
+    <span style="color: red"><%= validation.email %></span>
+    <% } %>
+    <input
+      type="password"
+      class="input-box"
+      placeholder="Password"
+      id="password"
+      name="password"
+      value="<%= values.password %>"
+    />
+    <% if(validation.password){ %>
+    <span style="color: red"><%= validation.password %></span>
+    <% } %>
     <p>
-      <span><input type="checkbox" /></span>I agree to terms & conditions
+      <span><input type="checkbox" required /></span>I agree to terms &
+      conditions
     </p>
-    <button type="button" class="signup-btn">Create Account</button>
+    <button type="submit" class="signup-btn">Create Account</button>
   </form>
 </div>
 <div class="signup-foot">
