--- a/contents/css/index.css
+++ b/contents/css/index.css
@@ -111,6 +111,35 @@ img{
 .banner button:hover{
     color: #4169E1;
 }
+.banner2{
+    position: relative;
+    width: 100%;
+    height: 70vh;
+    background: url("/images/welcome.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    color: white;
+}
+.banner2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    z-index: 0;
+  }
+.banner2 h1{
+    margin-left: 50px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    position: relative;
+    padding: 10px;
+    font-size: 80px;
+}
 .one{
     margin-top: 30px;
     width: 30px;
@@ -264,6 +293,10 @@ img{
     padding: 35px;
 }
 .signup-foot footer{
+    font-size: 12px;
+    padding: 35px;
+}
+.welcome-foot footer{
     font-size: 12px;
     padding: 35px;
 }
