Email setup completed

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,6 +1,23 @@
 <div class="banner2">
   <h1>Welcome to Libby's Rental</h1>
 </div>
+<div class="container3">
+  <div class="about-us">
+    <h3>Why should you choose us?</h3>
+    <p>
+      Thank you for signing up at Libby's Rental Properties. Our business aims
+      at satisfying customers expectation and creating a hassle free experience.
+      We are a brand new company and sometimes people can be picky at where to
+      choose to book their vacation, but we have studied the market of all other
+      reputable companies and we guarantee a smoother experience with quicker
+      response time all the while keeping our prices at a much lower rate than
+      our leading competitors, we have a vast range of other perks but we'll
+      leave that up to you upon further inspection of our website. A plan to
+      choose us is a plan you won't regret.
+    </p>
+    <button type="button" onclick="location.href='/'">Explore</button>
+  </div>
+</div>
 <div class="welcome-foot">
   <footer>
     <hr />
