--- a/contents/css/index.css
+++ b/contents/css/index.css
@@ -140,6 +140,38 @@ img{
     padding: 10px;
     font-size: 80px;
 }
+.container3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.about-us h3{
+    font-size: large;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    margin-top: 60px;
+    text-align: center;
+}
+.about-us p{
+   font-size: medium;
+   text-align: center;
+   margin-left: 60px;
+   margin-right: 60px;
+}
+.about-us button{
+    border: 1px solid white;
+    background: #4169E1;
+    padding: 10px 30px;
+    margin-left: 20px;
+    font-size: 20px;
+    color: black;
+    transition: 0.8s;
+    border-radius: 10px;
+    margin-left: 45%;
+}
+.about-us button:hover{
+    color: white;
+}
 .one{
     margin-top: 30px;
     width: 30px;
@@ -497,6 +529,23 @@ html{
         width: 100%;
         height: 30vh;
     }
+    .banner2{
+        width: 100%;
+        height: 30vh;
+    }
+    .banner2 h1{
+        font-size: 30px;
+    }
+    .about-us h3{
+        font-size: medium;
+    }
+    .about-us p{
+       font-size: small;
+    }
+    .about-us button{
+        font-size: 10px;
+        margin-left: 35%;
+    }
     .words{
         line-height: 1.2;
         margin: 50px;
@@ -668,6 +717,17 @@ html{
         .banner{
             width: 100%;
             height: 30vh;
+        }
+        .banner2{
+            width: 100%;
+            height: 30vh;
+        }
+        .banner2 h1{
+            font-size: 50px;
+        }
+        .about-us button{
+            font-size: 15px;
+            margin-left: 43%;
         }
         .words{
             line-height: 1.2;
