--- a/views/general/welcome.ejs
+++ b/views/general/welcome.ejs
@@ -37,7 +37,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/rentals">Rentals</a>
+            <a class="nav-link" href="/rentals/rentals">Rentals</a>
             <a class="nav-link" href="/sign-up">Sign-up</a>
             <a class="nav-link" href="/log-in">Log-in</a>
           </div>
