--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,9 +18,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="/rentals">Rentals</a>
+          <a class="nav-link" href="/rentals/rentals">Rentals</a>
+          <% if(user && role === "clerk") { %>
+          <a class="nav-link" href="/rentals/list">
+            Hello <%= user.firstName %>
+          </a>
+          <a class="nav-link" href="/logout">Logout</a>
+          <% } else if(user && role === "customer") { %>
+          <a class="nav-link" href="/cart"> Hello <%= user.firstName %> </a>
+          <a class="nav-link" href="/logout">Logout</a>
+          <% } else { %>
           <a class="nav-link" href="/sign-up">Sign-up</a>
           <a class="nav-link" href="/log-in">Log-in</a>
+          <% } %>
         </div>
       </div>
     </div>
