--- a/views/general/home.ejs
+++ b/views/general/home.ejs
@@ -1,13 +1,84 @@
-<% rentals.forEach(function(group) { %>
-<div class="cityProv-header">
-  <h2><%= group.cityProvince %></h2>
+<div class="content">
+  <div class="banner">
+    <div class="container">
+      <div class="banner-content">
+        <h1>Vacations always in season</h1>
+        <p>
+          Booking your perfect getaway vacation from the comfort <br />of your
+          home. Whether it be friends or family we got you <br />covered.
+        </p>
+        <button type="button" onclick="location.href='/rentals'">
+          view rentals
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="words">
+    <p>
+      Welcome to Libby's Rentals a place that welcomes families of all
+      backgrounds. Whether you're looking for a place just to relax with family
+      members or a getaway with that special someone, we've got you covered.
+      From houses, cottages to beach houses, spacious luxurious bedrooms with
+      additional amenities makes you feel right at home. Our hassle free website
+      always you to book your stay immediately in the comfort of your home with
+      24/7 support system to make sure your needs are met.
+    </p>
+  </div>
+  <div class="main-container">
+    <div class="container1">
+      <figure>
+        <img src="/images/beachview.jpg" alt="beachview" />
+        <figcaption class="pics">Pool side with view</figcaption>
+      </figure>
+    </div>
+    <div class="container1">
+      <figure>
+        <img src="/images/cottage.jpg" alt="cottage" />
+        <figcaption class="pics">Enjoy nature with family</figcaption>
+      </figure>
+    </div>
+  </div>
+  <div class="wrapper">
+    <div class="one">
+      <img src="/images/money.png" alt="money icon" />
+    </div>
+    <div class="two">
+      <img src="/images/world.png" alt="world icon" />
+    </div>
+    <div class="three">
+      <img src="/images/security.png" alt="security icon" />
+    </div>
+    <div class="four">
+      <img src="/images/support.png" alt="support icon" />
+    </div>
+    <div class="one-text">
+      <h2>Affordable prices</h2>
+      <p>spacious houses, close-by amenities</p>
+    </div>
+    <div class="two-text">
+      <h2>Everyone is VIP</h2>
+      <p>A place where everyone can feel appreciated.</p>
+    </div>
+    <div class="three-text">
+      <h2>Safety is key</h2>
+      <p>surveillance on-site to ensure safe stay.</p>
+    </div>
+    <div class="four-text">
+      <h2>Customer support</h2>
+      <p>24/7 support to answer all booking inquiries and more.</p>
+    </div>
+  </div>
+  <% if (rentals && rentals.length > 0) { %>
+  <div class="sub-header">
+    <h2>Featured Rentals</h2>
+    <div class="images-container">
+      <% rentals.forEach(rental => { %> <%- include("../partials/rental",
+      rental) %> <% }); %>
+    </div>
+  </div>
+  <% } %>
 </div>
-<div class="images-container2">
-  <% group.rentals.forEach(function(rental) { %> <%- include('partials/rental',
-  rental) %> <% }); %>
-</div>
-<% }); %>
-<div class="rental-foot">
+<div class="home-foot">
   <footer>
     <hr />
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
