--- a/views/partials/rental.ejs
+++ b/views/partials/rental.ejs
@@ -1,30 +1,30 @@
-<% if(featuredRentals){%>
+<% if(rentals){%>
 <figure>
-  <img src="/images/<%= imageUrl %>" alt="<%- headline %>" />
+  <img src="/images/<%= rentals.imageUrl %>" alt="<%= rentals.headline %>" />
   <figcaption class="<%= isMain ? 'fig1' : 'fig4' %>">
-    <p><%= headline %></p>
+    <p><%= rentals.headline %></p>
   </figcaption>
   <figcaption class="fig1">
-    <% if(featuredRentals && isMain) {%>
-    <p><%= city %>, <%= province %></p>
+    <% if(rentals && isMain) {%>
+    <p><%= rentals.city %>, <%= rentals.province %></p>
     <% } %>
     <figure class="fig2">
       <p>
-        Sleeps <%= numSleeps %> | <%= numBedrooms %> BR | <%= numBathrooms %> BA
-        | C$<%= pricePerNight %>/night
+        Sleeps <%= rentals.numSleeps %> | <%= rentals.numBedrooms %> BR | <%=
+        rentals.numBathrooms %> BA | C$<%= rentals.pricePerNight %>/night
       </p>
     </figure>
   </figcaption>
 </figure>
 <% } else { %>
 <figure>
-  <img src="/images/<%= imageUrl %>" alt="<%- headline %>" />
+  <img src="/images/<%= rentals.imageUrl %>" alt="<%= rentals.headline %>" />
   <figcaption class="fig4">
-    <p><%= headline %></p>
+    <p><%= rentals.headline %></p>
     <figure class="fig2">
       <p>
-        Sleeps <%= numSleeps %> | <%= numBedrooms %> BR | <%= numBathrooms %> BA
-        | C$<%= pricePerNight %>/night
+        Sleeps <%= rentals.numSleeps %> | <%= rentals.numBedrooms %> BR | <%=
+        rentals.numBathrooms %> BA | C$<%= rentals.pricePerNight %>/night
       </p>
     </figure>
   </figcaption>
