rentals to populate home & rentals page

--- a/views/general/home.ejs
+++ b/views/general/home.ejs
@@ -72,10 +72,9 @@
   <div class="sub-header">
     <h2>Featured Rentals</h2>
     <div class="images-container">
-      <% rentals.forEach(rental => { %> <%- include("../partials/rental",
-      rental) %> <% }); %>
+      <% rentals.forEach(rental => { %> <%- include("../partials/rental",{
+      rental }) %> <% }); %>
     </div>
-    z
   </div>
   <% } %>
 </div>
