--- a/contents/css/index.css
+++ b/contents/css/index.css
@@ -332,6 +332,14 @@ img{
     font-size: 12px;
     padding: 35px;
 }
+.add-foot footer{
+    font-size: 12px;
+    padding: 35px;
+}
+.list-foot footer{
+    font-size: 12px;
+    padding: 35px;
+}
 hr{
     margin-bottom: 20px;
 }
@@ -462,9 +470,52 @@ hr{
     font-size: 50px;
     font-weight: bold;
 }
+.rental-list{
+    margin: 20px;
+    margin-bottom: 40px;
+    color: #4169E1;
+    display: flex;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.rental-list h2{
+    font-size: 50px;
+    font-weight: bold;
+}
+.clerk-options {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    justify-content: center;
+ 
+  }  
+.clerk-options li {
+    margin-top: 10px;
+    margin: 5px;
+  }  
+.clerk-options li a {
+    display: inline-block;
+    text-decoration: none;
+    padding: 8px 16px;
+    border: 1px solid black;
+    color: #4169E1;
+    border-radius: 4px;
+    transition: all 0.3s linear;
+  }
+.clerk-options li a:hover {
+    transform: scale(1.1);
+    background-color: #4169E1;
+    color: #fff;
+  }
 .images-container2{
     max-width: 100%;
     max-height: 100%;
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 20px;
+    margin: 40px;
+}
+.images-container3{
     display: grid;
     grid-template-columns: auto auto;
     gap: 20px;
@@ -503,6 +554,39 @@ html{
 }
 .back-to-top:hover span{
     transform: translateY(-4px);
+}
+.form-container{
+    padding: 5px;
+    margin-left: 450px;  
+}
+.form-container label{
+    margin: 10px;
+    width: 200px;
+}
+.form-container button{
+    width: 120px;
+    padding: 10px;
+    margin: 10px;
+    font: 1em sans-serif;
+    color: black;
+    transition: all 0.3s linear;
+    margin-bottom: 40px;
+}
+.form-container button:hover{
+    color: #4169E1;
+    transform: scale(1.2);
+}
+.add-rentals{
+    margin: 20px;
+    margin-bottom: 40px;
+    color: #4169E1;
+    display: flex;
+    justify-content: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.add-rentals h2{
+    font-size: 50px;
+    font-weight: bold;
 }
 @media screen and (max-width: 600px){
     .logo img{
