--- a/contents/css/index.css
+++ b/contents/css/index.css
@@ -516,6 +516,8 @@ hr{
     margin: 40px;
 }
 .images-container3{
+    max-width: 100%;
+    max-height: 100%;
     display: grid;
     grid-template-columns: auto auto;
     gap: 20px;
