--- a/views/load-data/rentals.ejs
+++ b/views/load-data/rentals.ejs
@@ -1,5 +1,7 @@
-<% if(message === "exist") { %>
-<p>Rentals have already been added to the database</p>
-<% } else if (message === "added"){ %>
-<p>Added rentals to the database</p>
-<% } %>
+<div class="rental-message">
+  <% if(message === "exist") { %>
+  <p>Rentals have already been added to the database</p>
+  <% } else if (message === "added"){ %>
+  <p>Added rentals to the database</p>
+  <% } %>
+</div>
