--- a/contents/css/index.css
+++ b/contents/css/index.css
@@ -336,13 +336,23 @@ img{
     font-size: 12px;
     padding: 35px;
 }
+.remove-foot footer{
+    font-size: 12px;
+    padding: 35px;
+}
 .add-foot footer{
     font-size: 12px;
     padding: 35px;
 }
-.list-foot footer{
+.rental-list-foot footer{
     font-size: 12px;
     padding: 35px;
+
+}
+.rental-list-foot footer p{
+    font-size: 12px;
+    padding: 35px;
+    
 }
 hr{
     margin-bottom: 20px;
@@ -583,16 +593,18 @@ html{
     width: 200px;
 }
 .form-container button{
-    width: 120px;
-    padding: 10px;
+    color: white;
+    border: none;
     margin: 10px;
-    font: 1em sans-serif;
-    color: black;
+    padding: 10px 20px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: dodgerblue;
+    border-radius: 4px;
     transition: all 0.3s linear;
-    margin-bottom: 40px;
 }
 .form-container button:hover{
-    color: #4169E1;
+    background-color: #4169E1;
     transform: scale(1.2);
 }
 .add-rentals{
@@ -618,6 +630,39 @@ html{
 .edit-rentals h2{
     font-size: 50px;
     font-weight: bold;
+}
+.remove-rental{
+    text-align: center;
+    margin-top: 100px;
+}
+.remove-rental h3{
+    font-size: 20px;
+}
+.remove-rental button{
+    color: white;
+    border: none;
+    margin: 10px;
+    padding: 10px 20px;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: dodgerblue;
+    border-radius: 4px;
+    transition: all 0.3s linear;
+}
+.remove-rental button:hover{
+    background-color: #4169E1;
+    transform: scale(1.2);
+}
+.rental-image{
+    max-width: 50%;
+    max-height: 50%;
+    display: inline-block;
+}
+.rental-image p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    margin-left: 30px;
 }
 @media screen and (max-width: 600px){
     .logo img{
@@ -738,6 +783,10 @@ html{
         font-size:15px;
         font-weight: bold;
     }
+    .rental-list h2{
+        font-size: 20px;
+        font-weight: bold;
+    }
     .images-container2{
         max-width: 100%;
         max-height: 100%;
@@ -746,11 +795,22 @@ html{
         gap: 20px;
         margin: 40px;
     }
+    .images-container3{
+        max-width: 80%;
+        max-height: 80%;
+        display: grid;
+        grid-template-columns: auto;
+    }
     .fig4{
         font-size: 10px;
     }
     .fig2{
         font-size: 8px;
+    }
+    .fig2 p{
+        font-size: 10px;
+        font-weight: normal;
+        margin-top: 10px;
     }
     .input-box{
         border-radius: 30px;
@@ -806,6 +866,59 @@ html{
         font-size: 5px;
         color: #4169E1;
     }
+    .welcome-foot .navbar-toggler{
+        font-size: 5px;
+        color: #4169E1;
+    }
+    .add-foot .navbar-toggler{
+        font-size: 5px;
+        color: #4169E1;
+    }
+    .list-foot .navbar-toggler{
+        font-size: 5px;
+        color: #4169E1;
+    }
+    .remove-foot .navbar-toggler{
+        font-size: 5px;
+        color: #4169E1;
+    }
+    .edit-foot .navbar-toggler{
+        font-size: 5px;
+        color: #4169E1;
+    }
+    .add-rentals h2{
+        font-size: 25px;
+    }
+    .edit-rentals h2{
+        font-size: 25px;
+    }
+    .form-container{
+        padding: 5px;
+        margin-left: 100px;  
+    }
+    .form-container label{
+        margin: 5px;
+        width: 200px;
+        font-size: 10px;
+    }
+    .form-container button{
+        width: 100px;
+        padding: 8px;
+        margin: 10px;
+        font-size: 12px;
+    }
+    .rental-image{
+        max-width: 80%;
+        max-height: 80%;
+        display: inline-block;
+    }
+    .rental-image p{
+        font-size: 20px;
+    }
+    .remove-rental h3{
+        font-size: 15px;
+    }
+
 }
     @media screen and (max-width: 1125px) and (min-width: 600px)
     {
@@ -925,6 +1038,10 @@ html{
             font-size: 30px;
             font-weight: bold;
         }
+        .rental-list h2{
+            font-size: 40px;
+            font-weight: bold;
+        }
         .images-container2{
             max-width: 100%;
             max-height: 100%;
@@ -933,6 +1050,7 @@ html{
             gap: 20px;
             margin: 40px;
         }
+        
         .fig4{
             font-size: 20px;
         }
@@ -1008,6 +1126,25 @@ html{
             font-size: 5px;
             color: #4169E1;
         }
-    
-    
+        .form-container{
+            padding: 5px;
+            margin-left: 150px;  
+        }
+        .form-container button{
+            width: 100px;
+            padding: 8px;
+            margin: 10px;
+            font-size: 12px;
+        }
+        .add-rentals h2{
+            font-size: 40px;
+        }
+        .edit-rentals h2{
+            font-size: 40px;
+        }
+        .rental-image{
+            max-width: 70%;
+            max-height: 70%;
+            display: inline-block;
+        }
 }
