--- a/views/rentals/list.ejs
+++ b/views/rentals/list.ejs
@@ -25,7 +25,7 @@
   </div>
   <% }); %>
 </div>
-<div class="rental-list-foot">
+<div class="list-foot">
   <footer>
     <hr />
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -56,14 +56,14 @@
         </div>
       </div>
     </nav>
-    <p>
+    <p class="p-graph-footer">
     By submitting this assignment I declare that this assignment is my own work
     in accordance with the Seneca Academic Policy. <br />No part of this
     assignment has been copied manually or electronically from any other source
     (including web sites) or distributed to other students.</p>
-    <p>&copy Kester Bascillo, kbascillo@myseneca.ca, WEB322 Winter 2023</p>
+    <p class="p-graph-footer">&copy Kester Bascillo, kbascillo@myseneca.ca, WEB322 Winter 2023</p>
     <div class="credits">
-      <p>
+      <p class="p-graph-footer">
         Credits:
         <a
           href="https://pixabay.com/users/paulbr75-2938186/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=3123295"
