--- a/views/general/log-in.ejs
+++ b/views/general/log-in.ejs
@@ -26,7 +26,7 @@
       <div class="role-selection">
         <label>
           <input type="radio" name="role" value="clerk" checked>
-          Data Entry Clerk
+          Clerk
         </label>
         <label>
           <input type="radio" name="role" value="customer">
