--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -17,9 +17,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="/rentals/rentals">Rentals</a>
+            <% if(user) { %>
+            <a class="nav-link" href="/log-in">Logout</a>
+            <% } else { %>
             <a class="nav-link" href="/sign-up">Sign-up</a>
             <a class="nav-link" href="/log-in">Log-in</a>
+            <% } %>
+            <a class="nav-link" href="/rentals/rentals">Rentals</a>
           </div>
         </div>
       </div>
