--- a/views/rentals/add.ejs
+++ b/views/rentals/add.ejs
@@ -115,12 +115,10 @@
         </div>
       </div>
     </nav>
-    <p>
-      By submitting this assignment I declare that this assignment is my own
-      work in accordance with the Seneca Academic Policy. <br />No part of this
-      assignment has been copied manually or electronically from any other
-      source (including web sites) or distributed to other students.
-    </p>
+    By submitting this assignment I declare that this assignment is my own work
+    in accordance with the Seneca Academic Policy. <br />No part of this
+    assignment has been copied manually or electronically from any other source
+    (including web sites) or distributed to other students.
     <p>&copy Kester Bascillo, kbascillo@myseneca.ca, WEB322 Winter 2023</p>
     <div class="credits">
       <p>
