--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -15,7 +15,10 @@
     <title><%= title %> | Vacation rentals for every occasion</title>
   </head>
   <body>
-    <%- include('../partials/navbar') %> <%- body %>
+    <%- include('../partials/navbar') %>
+    <div class="content"><%- body %></div>
+
+    <%- include('../partials/footer') %>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
