--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -24,9 +24,12 @@
             Hello <%= user.firstName %>
           </a>
           <a class="nav-link" href="/logout">Logout</a>
-          <a class="nav-link" href="/load-data/rentals">Load Rentals </a>
+          <a class="nav-link" href="/load-data/rentals">Load Rentals</a>
           <% } else if(user && role === "customer") { %>
-          <a class="nav-link" href="/cart"> Hello <%= user.firstName %> </a>
+          <a class="nav-link" href="/cart">Hello <%= user.firstName %></a>
+          <a class="nav-link" href="/logout">Logout</a>
+          <% } else if(user && !role) { %>
+          <a class="nav-link" href="/welcome">Welcome <%= user.firstName %></a>
           <a class="nav-link" href="/logout">Logout</a>
           <% } else { %>
           <a class="nav-link" href="/sign-up">Sign-up</a>
